# EV11_Algoriots

./: ENVISION_Preprocessing_2025_26.ipynb  Envision_web_scrap_Algoriots.ipynb  README.md
Ev11model_Deployment/: README.md  app.py  llm.py  main.py  pyproject.toml  requirements.txt
Ev11model_Deployment/Model_PKL/: Cleaned_Liver_disease.pkl  Cleaned_diabetes_disease.pkl  covid_disease_model.pkl  covid_scaler_preprocessor.pkl  heart_disease_model.pkl  heart_scaler.pkl  kidney_scaler.pkl  kidney_xgb_model.pkl  obesity_data_pipline.pkl
Ev11model_Deployment/Model_ipynb/: CovidData.ipynb
Ev11model_Deployment/scripts/: Diabetes.ipynb  Heart_Disease.ipynb  KidneyDisease.ipynb  Liver Disease.ipynb  obesity.ipynb
Preprocessing_Vissualization/: EV11_Preprocessing.ipynb  EV11_Visualization.pbix
