[project]
name = "new-folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.7",
    "dotenv>=0.9.9",
    "google-genai>=1.56.0",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.2.2",
    "seaborn>=0.12.0",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.30.0",
    "xgboost>=2.0.0",
]
